// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All.js 1`] = `
"// @flow

import React from 'react';

class MyComponent extends React.Component<Props, State> {
  static defaultProps: DefaultProps = {};
  state: State = {};

  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends React.Component<Props, State> {
    static defaultProps: DefaultProps = {};
    state: State = {};

    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`ComponentNamedImport.js 1`] = `
"// @flow

import {Component} from 'react';

class MyComponent extends Component<Props, State> {
  static defaultProps: DefaultProps = {};
  state: State = {};

  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends Component<Props, State> {
    static defaultProps: DefaultProps = {};
    state: State = {};

    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`DefaultProps.js 1`] = `
"// @flow

import React from 'react';

class MyComponent extends React.Component<Props> {
  static defaultProps: DefaultProps = {};

  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends React.Component<Props> {
    static defaultProps: DefaultProps = {};

    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`DefaultPropsInferred.js 1`] = `
"// @flow

import React from 'react';

class MyComponent extends React.Component<Props> {
  static defaultProps = {};

  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends React.Component<Props> {
    static defaultProps = {};

    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`DefaultPropsInline.js 1`] = `
"// @flow

import React from 'react';

class MyComponent extends React.Component<Props> {
  static defaultProps: {a: number, b: number, c: number} = {a: 1, b: 2, c: 3};

  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends React.Component<Props> {
    static defaultProps: {a: number, b: number, c: number} = {a: 1, b: 2, c: 3};

    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`DefaultPropsNone.js 1`] = `
"// @flow

import React from 'react';

class MyComponent extends React.Component<Props> {
  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends React.Component<Props> {
    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`DefaultPropsNoneButState.js 1`] = `
"// @flow

import React from 'react';

class MyComponent extends React.Component<Props, State> {
  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends React.Component<Props, State> {
    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`DefaultPropsTypeArgNoProperty.js 1`] = `
"// @flow

import React from 'react';

class MyComponent extends React.Component<Props, State> {
  static defaultProps: any;
  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends React.Component<Props, State> {
    static defaultProps: any;
    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`DefaultPropsUninitialized.js 1`] = `
"// @flow

import React from 'react';

class MyComponent extends React.Component<Props> {
  static defaultProps: DefaultProps;

  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends React.Component<Props> {
    static defaultProps: DefaultProps;

    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`FlowNone.js 1`] = `
"import React from 'react';

class MyComponent extends React.Component<Props, State> {
  static defaultProps: DefaultProps = {};
  state: State = {};

  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends React.Component<Props, State> {
    static defaultProps: DefaultProps = {};
    state: State = {};

    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`PureComponent.js 1`] = `
"// @flow

import React from 'react';

class MyComponent extends React.PureComponent<Props, State> {
  static defaultProps: DefaultProps = {};
  state: State = {};

  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends React.PureComponent<Props, State> {
    static defaultProps: DefaultProps = {};
    state: State = {};

    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`PureComponentNamedImport.js 1`] = `
"// @flow

import {PureComponent} from 'react';

class MyComponent extends PureComponent<Props, State> {
  static defaultProps: DefaultProps = {};
  state: State = {};

  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends PureComponent<Props, State> {
    static defaultProps: DefaultProps = {};
    state: State = {};

    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;

exports[`ReactNone.js 1`] = `null`;

exports[`ReactRequire.js 1`] = `
"// @flow

const React = require('react');

class MyComponent extends React.Component<Props, State> {
  static defaultProps: DefaultProps = {};
  state: State = {};

  defaultProps: T;
  static props: T;
  static state: T;
  a: T;
  b = 5;
  c: T = 5;
  method() {}
}

const expression = () =>
  (class extends React.Component<Props, State> {
    static defaultProps: DefaultProps = {};
    state: State = {};

    defaultProps: T;
    static props: T;
    static state: T;
    a: T;
    b = 5;
    c: T = 5;
    method() {}
  })
"
`;
